refactor: add spring securty test dependency